deploy/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cover
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
