deploy/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cover
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: ilman.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: cover
                port:
                  name: http
  tls:
    - hosts:
        - ilman.io
      secretName: cover
